lab5/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> start
Rule 1     start -> struct
Rule 2     start -> start struct
Rule 3     block -> { block_interior }
Rule 4     struct -> expr ;
Rule 5     struct -> instruction ;
Rule 6     struct -> cond_expr
Rule 7     struct -> block
Rule 8     for_struct -> assignment ;
Rule 9     for_struct -> instruction ;
Rule 10    for_struct -> cond_expr
Rule 11    for_struct -> block
Rule 12    block_interior -> struct
Rule 13    block_interior -> block_interior struct
Rule 14    expr -> INTNUM
Rule 15    expr -> FLOATNUM
Rule 16    expr -> STRING
Rule 17    expr -> ZEROS ( expr )
Rule 18    expr -> ZEROS ( expr , expr )
Rule 19    expr -> ONES ( expr )
Rule 20    expr -> ONES ( expr , expr )
Rule 21    expr -> EYE ( expr )
Rule 22    expr -> EYE ( expr , expr )
Rule 23    expr -> lvalue
Rule 24    expr -> ( expr )
Rule 25    expr -> - expr
Rule 26    expr -> expr '
Rule 27    array_interior -> array_interior , expr
Rule 28    array_interior -> expr
Rule 29    range -> expr : expr
Rule 30    expr -> [ array_interior ]
Rule 31    expr -> [ ]
Rule 32    lvalue -> ID
Rule 33    lvalue -> ID [ array_interior ]
Rule 34    lvalue -> ID [ range ]
Rule 35    assignment -> lvalue = expr
Rule 36    assignment -> lvalue PLUSASSIGN expr
Rule 37    assignment -> lvalue MINASSIGN expr
Rule 38    assignment -> lvalue MULTASSIGN expr
Rule 39    assignment -> lvalue DIVASSIGN expr
Rule 40    expr -> assignment
Rule 41    expr -> expr + expr
Rule 42    expr -> expr - expr
Rule 43    expr -> expr * expr
Rule 44    expr -> expr / expr
Rule 45    expr -> expr MPLUS expr
Rule 46    expr -> expr MMINUS expr
Rule 47    expr -> expr MMLTP expr
Rule 48    expr -> expr MDIV expr
Rule 49    expr -> expr EQ expr
Rule 50    expr -> expr NEQ expr
Rule 51    expr -> expr GTEQ expr
Rule 52    expr -> expr LTEQ expr
Rule 53    expr -> expr > expr
Rule 54    expr -> expr < expr
Rule 55    cond_expr -> cond_if
Rule 56    cond_expr -> cond_while
Rule 57    cond_expr -> cond_for
Rule 58    cond_if -> IF ( expr ) struct
Rule 59    cond_if -> IF ( expr ) struct ELSE struct
Rule 60    cond_while -> WHILE ( expr ) struct
Rule 61    cond_for -> FOR lvalue = range for_struct
Rule 62    instruction -> RETURN expr
Rule 63    instruction -> PRINT array_interior
Rule 64    instruction -> BREAK
Rule 65    instruction -> CONTINUE

Terminals, with rules where they appear

'                    : 26
(                    : 17 18 19 20 21 22 24 58 59 60
)                    : 17 18 19 20 21 22 24 58 59 60
*                    : 43
+                    : 41
,                    : 18 20 22 27
-                    : 25 42
/                    : 44
:                    : 29
;                    : 4 5 8 9
<                    : 54
=                    : 35 61
>                    : 53
BREAK                : 64
CONTINUE             : 65
DIVASSIGN            : 39
ELSE                 : 59
EQ                   : 49
EYE                  : 21 22
FLOATNUM             : 15
FOR                  : 61
GTEQ                 : 51
ID                   : 32 33 34
IF                   : 58 59
INTNUM               : 14
LTEQ                 : 52
MDIV                 : 48
MINASSIGN            : 37
MMINUS               : 46
MMLTP                : 47
MPLUS                : 45
MULTASSIGN           : 38
NEQ                  : 50
ONES                 : 19 20
PLUSASSIGN           : 36
PRINT                : 63
RETURN               : 62
STRING               : 16
WHILE                : 60
ZEROS                : 17 18
[                    : 30 31 33 34
]                    : 30 31 33 34
error                : 
{                    : 3
}                    : 3

Nonterminals, with rules where they appear

array_interior       : 27 30 33 63
assignment           : 8 40
block                : 7 11
block_interior       : 3 13
cond_expr            : 6 10
cond_for             : 57
cond_if              : 55
cond_while           : 56
expr                 : 4 17 18 18 19 20 20 21 22 22 24 25 26 27 28 29 29 35 36 37 38 39 41 41 42 42 43 43 44 44 45 45 46 46 47 47 48 48 49 49 50 50 51 51 52 52 53 53 54 54 58 59 60 62
for_struct           : 61
instruction          : 5 9
lvalue               : 23 35 36 37 38 39 61
range                : 34 61
start                : 2 0
struct               : 1 2 12 13 58 59 59 60

Parsing method: LALR

state 0

    (0) S' -> . start
    (1) start -> . struct
    (2) start -> . start struct
    (4) struct -> . expr ;
    (5) struct -> . instruction ;
    (6) struct -> . cond_expr
    (7) struct -> . block
    (14) expr -> . INTNUM
    (15) expr -> . FLOATNUM
    (16) expr -> . STRING
    (17) expr -> . ZEROS ( expr )
    (18) expr -> . ZEROS ( expr , expr )
    (19) expr -> . ONES ( expr )
    (20) expr -> . ONES ( expr , expr )
    (21) expr -> . EYE ( expr )
    (22) expr -> . EYE ( expr , expr )
    (23) expr -> . lvalue
    (24) expr -> . ( expr )
    (25) expr -> . - expr
    (26) expr -> . expr '
    (30) expr -> . [ array_interior ]
    (31) expr -> . [ ]
    (40) expr -> . assignment
    (41) expr -> . expr + expr
    (42) expr -> . expr - expr
    (43) expr -> . expr * expr
    (44) expr -> . expr / expr
    (45) expr -> . expr MPLUS expr
    (46) expr -> . expr MMINUS expr
    (47) expr -> . expr MMLTP expr
    (48) expr -> . expr MDIV expr
    (49) expr -> . expr EQ expr
    (50) expr -> . expr NEQ expr
    (51) expr -> . expr GTEQ expr
    (52) expr -> . expr LTEQ expr
    (53) expr -> . expr > expr
    (54) expr -> . expr < expr
    (62) instruction -> . RETURN expr
    (63) instruction -> . PRINT array_interior
    (64) instruction -> . BREAK
    (65) instruction -> . CONTINUE
    (55) cond_expr -> . cond_if
    (56) cond_expr -> . cond_while
    (57) cond_expr -> . cond_for
    (3) block -> . { block_interior }
    (32) lvalue -> . ID
    (33) lvalue -> . ID [ array_interior ]
    (34) lvalue -> . ID [ range ]
    (35) assignment -> . lvalue = expr
    (36) assignment -> . lvalue PLUSASSIGN expr
    (37) assignment -> . lvalue MINASSIGN expr
    (38) assignment -> . lvalue MULTASSIGN expr
    (39) assignment -> . lvalue DIVASSIGN expr
    (58) cond_if -> . IF ( expr ) struct
    (59) cond_if -> . IF ( expr ) struct ELSE struct
    (60) cond_while -> . WHILE ( expr ) struct
    (61) cond_for -> . FOR lvalue = range for_struct

    INTNUM          shift and go to state 7
    FLOATNUM        shift and go to state 8
    STRING          shift and go to state 9
    ZEROS           shift and go to state 10
    ONES            shift and go to state 12
    EYE             shift and go to state 13
    (               shift and go to state 11
    -               shift and go to state 15
    [               shift and go to state 16
    RETURN          shift and go to state 18
    PRINT           shift and go to state 19
    BREAK           shift and go to state 20
    CONTINUE        shift and go to state 21
    {               shift and go to state 25
    ID              shift and go to state 26
    IF              shift and go to state 27
    WHILE           shift and go to state 28
    FOR             shift and go to state 29

    start                          shift and go to state 1
    struct                         shift and go to state 2
    expr                           shift and go to state 3
    instruction                    shift and go to state 4
    cond_expr                      shift and go to state 5
    block                          shift and go to state 6
    lvalue                         shift and go to state 14
    assignment                     shift and go to state 17
    cond_if                        shift and go to state 22
    cond_while                     shift and go to state 23
    cond_for                       shift and go to state 24

state 1

    (0) S' -> start .
    (2) start -> start . struct
    (4) struct -> . expr ;
    (5) struct -> . instruction ;
    (6) struct -> . cond_expr
    (7) struct -> . block
    (14) expr -> . INTNUM
    (15) expr -> . FLOATNUM
    (16) expr -> . STRING
    (17) expr -> . ZEROS ( expr )
    (18) expr -> . ZEROS ( expr , expr )
    (19) expr -> . ONES ( expr )
    (20) expr -> . ONES ( expr , expr )
    (21) expr -> . EYE ( expr )
    (22) expr -> . EYE ( expr , expr )
    (23) expr -> . lvalue
    (24) expr -> . ( expr )
    (25) expr -> . - expr
    (26) expr -> . expr '
    (30) expr -> . [ array_interior ]
    (31) expr -> . [ ]
    (40) expr -> . assignment
    (41) expr -> . expr + expr
    (42) expr -> . expr - expr
    (43) expr -> . expr * expr
    (44) expr -> . expr / expr
    (45) expr -> . expr MPLUS expr
    (46) expr -> . expr MMINUS expr
    (47) expr -> . expr MMLTP expr
    (48) expr -> . expr MDIV expr
    (49) expr -> . expr EQ expr
    (50) expr -> . expr NEQ expr
    (51) expr -> . expr GTEQ expr
    (52) expr -> . expr LTEQ expr
    (53) expr -> . expr > expr
    (54) expr -> . expr < expr
    (62) instruction -> . RETURN expr
    (63) instruction -> . PRINT array_interior
    (64) instruction -> . BREAK
    (65) instruction -> . CONTINUE
    (55) cond_expr -> . cond_if
    (56) cond_expr -> . cond_while
    (57) cond_expr -> . cond_for
    (3) block -> . { block_interior }
    (32) lvalue -> . ID
    (33) lvalue -> . ID [ array_interior ]
    (34) lvalue -> . ID [ range ]
    (35) assignment -> . lvalue = expr
    (36) assignment -> . lvalue PLUSASSIGN expr
    (37) assignment -> . lvalue MINASSIGN expr
    (38) assignment -> . lvalue MULTASSIGN expr
    (39) assignment -> . lvalue DIVASSIGN expr
    (58) cond_if -> . IF ( expr ) struct
    (59) cond_if -> . IF ( expr ) struct ELSE struct
    (60) cond_while -> . WHILE ( expr ) struct
    (61) cond_for -> . FOR lvalue = range for_struct

    INTNUM          shift and go to state 7
    FLOATNUM        shift and go to state 8
    STRING          shift and go to state 9
    ZEROS           shift and go to state 10
    ONES            shift and go to state 12
    EYE             shift and go to state 13
    (               shift and go to state 11
    -               shift and go to state 15
    [               shift and go to state 16
    RETURN          shift and go to state 18
    PRINT           shift and go to state 19
    BREAK           shift and go to state 20
    CONTINUE        shift and go to state 21
    {               shift and go to state 25
    ID              shift and go to state 26
    IF              shift and go to state 27
    WHILE           shift and go to state 28
    FOR             shift and go to state 29

    struct                         shift and go to state 30
    expr                           shift and go to state 3
    instruction                    shift and go to state 4
    cond_expr                      shift and go to state 5
    block                          shift and go to state 6
    lvalue                         shift and go to state 14
    assignment                     shift and go to state 17
    cond_if                        shift and go to state 22
    cond_while                     shift and go to state 23
    cond_for                       shift and go to state 24

state 2

    (1) start -> struct .

    INTNUM          reduce using rule 1 (start -> struct .)
    FLOATNUM        reduce using rule 1 (start -> struct .)
    STRING          reduce using rule 1 (start -> struct .)
    ZEROS           reduce using rule 1 (start -> struct .)
    ONES            reduce using rule 1 (start -> struct .)
    EYE             reduce using rule 1 (start -> struct .)
    (               reduce using rule 1 (start -> struct .)
    -               reduce using rule 1 (start -> struct .)
    [               reduce using rule 1 (start -> struct .)
    RETURN          reduce using rule 1 (start -> struct .)
    PRINT           reduce using rule 1 (start -> struct .)
    BREAK           reduce using rule 1 (start -> struct .)
    CONTINUE        reduce using rule 1 (start -> struct .)
    {               reduce using rule 1 (start -> struct .)
    ID              reduce using rule 1 (start -> struct .)
    IF              reduce using rule 1 (start -> struct .)
    WHILE           reduce using rule 1 (start -> struct .)
    FOR             reduce using rule 1 (start -> struct .)
    $end            reduce using rule 1 (start -> struct .)


state 3

    (4) struct -> expr . ;
    (26) expr -> expr . '
    (41) expr -> expr . + expr
    (42) expr -> expr . - expr
    (43) expr -> expr . * expr
    (44) expr -> expr . / expr
    (45) expr -> expr . MPLUS expr
    (46) expr -> expr . MMINUS expr
    (47) expr -> expr . MMLTP expr
    (48) expr -> expr . MDIV expr
    (49) expr -> expr . EQ expr
    (50) expr -> expr . NEQ expr
    (51) expr -> expr . GTEQ expr
    (52) expr -> expr . LTEQ expr
    (53) expr -> expr . > expr
    (54) expr -> expr . < expr

    ;               shift and go to state 31
    '               shift and go to state 32
    +               shift and go to state 33
    -               shift and go to state 34
    *               shift and go to state 35
    /               shift and go to state 36
    MPLUS           shift and go to state 37
    MMINUS          shift and go to state 38
    MMLTP           shift and go to state 39
    MDIV            shift and go to state 40
    EQ              shift and go to state 41
    NEQ             shift and go to state 42
    GTEQ            shift and go to state 43
    LTEQ            shift and go to state 44
    >               shift and go to state 45
    <               shift and go to state 46


state 4

    (5) struct -> instruction . ;

    ;               shift and go to state 47


state 5

    (6) struct -> cond_expr .

    INTNUM          reduce using rule 6 (struct -> cond_expr .)
    FLOATNUM        reduce using rule 6 (struct -> cond_expr .)
    STRING          reduce using rule 6 (struct -> cond_expr .)
    ZEROS           reduce using rule 6 (struct -> cond_expr .)
    ONES            reduce using rule 6 (struct -> cond_expr .)
    EYE             reduce using rule 6 (struct -> cond_expr .)
    (               reduce using rule 6 (struct -> cond_expr .)
    -               reduce using rule 6 (struct -> cond_expr .)
    [               reduce using rule 6 (struct -> cond_expr .)
    RETURN          reduce using rule 6 (struct -> cond_expr .)
    PRINT           reduce using rule 6 (struct -> cond_expr .)
    BREAK           reduce using rule 6 (struct -> cond_expr .)
    CONTINUE        reduce using rule 6 (struct -> cond_expr .)
    {               reduce using rule 6 (struct -> cond_expr .)
    ID              reduce using rule 6 (struct -> cond_expr .)
    IF              reduce using rule 6 (struct -> cond_expr .)
    WHILE           reduce using rule 6 (struct -> cond_expr .)
    FOR             reduce using rule 6 (struct -> cond_expr .)
    $end            reduce using rule 6 (struct -> cond_expr .)
    }               reduce using rule 6 (struct -> cond_expr .)
    ELSE            reduce using rule 6 (struct -> cond_expr .)


state 6

    (7) struct -> block .

    INTNUM          reduce using rule 7 (struct -> block .)
    FLOATNUM        reduce using rule 7 (struct -> block .)
    STRING          reduce using rule 7 (struct -> block .)
    ZEROS           reduce using rule 7 (struct -> block .)
    ONES            reduce using rule 7 (struct -> block .)
    EYE             reduce using rule 7 (struct -> block .)
    (               reduce using rule 7 (struct -> block .)
    -               reduce using rule 7 (struct -> block .)
    [               reduce using rule 7 (struct -> block .)
    RETURN          reduce using rule 7 (struct -> block .)
    PRINT           reduce using rule 7 (struct -> block .)
    BREAK           reduce using rule 7 (struct -> block .)
    CONTINUE        reduce using rule 7 (struct -> block .)
    {               reduce using rule 7 (struct -> block .)
    ID              reduce using rule 7 (struct -> block .)
    IF              reduce using rule 7 (struct -> block .)
    WHILE           reduce using rule 7 (struct -> block .)
    FOR             reduce using rule 7 (struct -> block .)
    $end            reduce using rule 7 (struct -> block .)
    }               reduce using rule 7 (struct -> block .)
    ELSE            reduce using rule 7 (struct -> block .)


state 7

    (14) expr -> INTNUM .

    ;               reduce using rule 14 (expr -> INTNUM .)
    '               reduce using rule 14 (expr -> INTNUM .)
    +               reduce using rule 14 (expr -> INTNUM .)
    -               reduce using rule 14 (expr -> INTNUM .)
    *               reduce using rule 14 (expr -> INTNUM .)
    /               reduce using rule 14 (expr -> INTNUM .)
    MPLUS           reduce using rule 14 (expr -> INTNUM .)
    MMINUS          reduce using rule 14 (expr -> INTNUM .)
    MMLTP           reduce using rule 14 (expr -> INTNUM .)
    MDIV            reduce using rule 14 (expr -> INTNUM .)
    EQ              reduce using rule 14 (expr -> INTNUM .)
    NEQ             reduce using rule 14 (expr -> INTNUM .)
    GTEQ            reduce using rule 14 (expr -> INTNUM .)
    LTEQ            reduce using rule 14 (expr -> INTNUM .)
    >               reduce using rule 14 (expr -> INTNUM .)
    <               reduce using rule 14 (expr -> INTNUM .)
    )               reduce using rule 14 (expr -> INTNUM .)
    ]               reduce using rule 14 (expr -> INTNUM .)
    ,               reduce using rule 14 (expr -> INTNUM .)
    :               reduce using rule 14 (expr -> INTNUM .)
    RETURN          reduce using rule 14 (expr -> INTNUM .)
    PRINT           reduce using rule 14 (expr -> INTNUM .)
    BREAK           reduce using rule 14 (expr -> INTNUM .)
    CONTINUE        reduce using rule 14 (expr -> INTNUM .)
    {               reduce using rule 14 (expr -> INTNUM .)
    ID              reduce using rule 14 (expr -> INTNUM .)
    IF              reduce using rule 14 (expr -> INTNUM .)
    WHILE           reduce using rule 14 (expr -> INTNUM .)
    FOR             reduce using rule 14 (expr -> INTNUM .)


state 8

    (15) expr -> FLOATNUM .

    ;               reduce using rule 15 (expr -> FLOATNUM .)
    '               reduce using rule 15 (expr -> FLOATNUM .)
    +               reduce using rule 15 (expr -> FLOATNUM .)
    -               reduce using rule 15 (expr -> FLOATNUM .)
    *               reduce using rule 15 (expr -> FLOATNUM .)
    /               reduce using rule 15 (expr -> FLOATNUM .)
    MPLUS           reduce using rule 15 (expr -> FLOATNUM .)
    MMINUS          reduce using rule 15 (expr -> FLOATNUM .)
    MMLTP           reduce using rule 15 (expr -> FLOATNUM .)
    MDIV            reduce using rule 15 (expr -> FLOATNUM .)
    EQ              reduce using rule 15 (expr -> FLOATNUM .)
    NEQ             reduce using rule 15 (expr -> FLOATNUM .)
    GTEQ            reduce using rule 15 (expr -> FLOATNUM .)
    LTEQ            reduce using rule 15 (expr -> FLOATNUM .)
    >               reduce using rule 15 (expr -> FLOATNUM .)
    <               reduce using rule 15 (expr -> FLOATNUM .)
    )               reduce using rule 15 (expr -> FLOATNUM .)
    ]               reduce using rule 15 (expr -> FLOATNUM .)
    ,               reduce using rule 15 (expr -> FLOATNUM .)
    :               reduce using rule 15 (expr -> FLOATNUM .)
    RETURN          reduce using rule 15 (expr -> FLOATNUM .)
    PRINT           reduce using rule 15 (expr -> FLOATNUM .)
    BREAK           reduce using rule 15 (expr -> FLOATNUM .)
    CONTINUE        reduce using rule 15 (expr -> FLOATNUM .)
    {               reduce using rule 15 (expr -> FLOATNUM .)
    ID              reduce using rule 15 (expr -> FLOATNUM .)
    IF              reduce using rule 15 (expr -> FLOATNUM .)
    WHILE           reduce using rule 15 (expr -> FLOATNUM .)
    FOR             reduce using rule 15 (expr -> FLOATNUM .)


state 9

    (16) expr -> STRING .

    ;               reduce using rule 16 (expr -> STRING .)
    '               reduce using rule 16 (expr -> STRING .)
    +               reduce using rule 16 (expr -> STRING .)
    -               reduce using rule 16 (expr -> STRING .)
    *               reduce using rule 16 (expr -> STRING .)
    /               reduce using rule 16 (expr -> STRING .)
    MPLUS           reduce using rule 16 (expr -> STRING .)
    MMINUS          reduce using rule 16 (expr -> STRING .)
    MMLTP           reduce using rule 16 (expr -> STRING .)
    MDIV            reduce using rule 16 (expr -> STRING .)
    EQ              reduce using rule 16 (expr -> STRING .)
    NEQ             reduce using rule 16 (expr -> STRING .)
    GTEQ            reduce using rule 16 (expr -> STRING .)
    LTEQ            reduce using rule 16 (expr -> STRING .)
    >               reduce using rule 16 (expr -> STRING .)
    <               reduce using rule 16 (expr -> STRING .)
    )               reduce using rule 16 (expr -> STRING .)
    ]               reduce using rule 16 (expr -> STRING .)
    ,               reduce using rule 16 (expr -> STRING .)
    :               reduce using rule 16 (expr -> STRING .)
    RETURN          reduce using rule 16 (expr -> STRING .)
    PRINT           reduce using rule 16 (expr -> STRING .)
    BREAK           reduce using rule 16 (expr -> STRING .)
    CONTINUE        reduce using rule 16 (expr -> STRING .)
    {               reduce using rule 16 (expr -> STRING .)
    ID              reduce using rule 16 (expr -> STRING .)
    IF              reduce using rule 16 (expr -> STRING .)
    WHILE           reduce using rule 16 (expr -> STRING .)
    FOR             reduce using rule 16 (expr -> STRING .)


state 10

    (17) expr -> ZEROS . ( expr )
    (18) expr -> ZEROS . ( expr , expr )

    (               shift and go to state 48


state 11

    (24) expr -> ( . expr )
    (14) expr -> . INTNUM
    (15) expr -> . FLOATNUM
    (16) expr -> . STRING
    (17) expr -> . ZEROS ( expr )
    (18) expr -> . ZEROS ( expr , expr )
    (19) expr -> . ONES ( expr )
    (20) expr -> . ONES ( expr , expr )
    (21) expr -> . EYE ( expr )
    (22) expr -> . EYE ( expr , expr )
    (23) expr -> . lvalue
    (24) expr -> . ( expr )
    (25) expr -> . - expr
    (26) expr -> . expr '
    (30) expr -> . [ array_interior ]
    (31) expr -> . [ ]
    (40) expr -> . assignment
    (41) expr -> . expr + expr
    (42) expr -> . expr - expr
    (43) expr -> . expr * expr
    (44) expr -> . expr / expr
    (45) expr -> . expr MPLUS expr
    (46) expr -> . expr MMINUS expr
    (47) expr -> . expr MMLTP expr
    (48) expr -> . expr MDIV expr
    (49) expr -> . expr EQ expr
    (50) expr -> . expr NEQ expr
    (51) expr -> . expr GTEQ expr
    (52) expr -> . expr LTEQ expr
    (53) expr -> . expr > expr
    (54) expr -> . expr < expr
    (32) lvalue -> . ID
    (33) lvalue -> . ID [ array_interior ]
    (34) lvalue -> . ID [ range ]
    (35) assignment -> . lvalue = expr
    (36) assignment -> . lvalue PLUSASSIGN expr
    (37) assignment -> . lvalue MINASSIGN expr
    (38) assignment -> . lvalue MULTASSIGN expr
    (39) assignment -> . lvalue DIVASSIGN expr

    INTNUM          shift and go to state 7
    FLOATNUM        shift and go to state 8
    STRING          shift and go to state 9
    ZEROS           shift and go to state 10
    ONES            shift and go to state 12
    EYE             shift and go to state 13
    (               shift and go to state 11
    -               shift and go to state 15
    [               shift and go to state 16
    ID              shift and go to state 26

    expr                           shift and go to state 49
    lvalue                         shift and go to state 14
    assignment                     shift and go to state 17

state 12

    (19) expr -> ONES . ( expr )
    (20) expr -> ONES . ( expr , expr )

    (               shift and go to state 50


state 13

    (21) expr -> EYE . ( expr )
    (22) expr -> EYE . ( expr , expr )

    (               shift and go to state 51


state 14

    (23) expr -> lvalue .
    (35) assignment -> lvalue . = expr
    (36) assignment -> lvalue . PLUSASSIGN expr
    (37) assignment -> lvalue . MINASSIGN expr
    (38) assignment -> lvalue . MULTASSIGN expr
    (39) assignment -> lvalue . DIVASSIGN expr

    ;               reduce using rule 23 (expr -> lvalue .)
    '               reduce using rule 23 (expr -> lvalue .)
    +               reduce using rule 23 (expr -> lvalue .)
    -               reduce using rule 23 (expr -> lvalue .)
    *               reduce using rule 23 (expr -> lvalue .)
    /               reduce using rule 23 (expr -> lvalue .)
    MPLUS           reduce using rule 23 (expr -> lvalue .)
    MMINUS          reduce using rule 23 (expr -> lvalue .)
    MMLTP           reduce using rule 23 (expr -> lvalue .)
    MDIV            reduce using rule 23 (expr -> lvalue .)
    EQ              reduce using rule 23 (expr -> lvalue .)
    NEQ             reduce using rule 23 (expr -> lvalue .)
    GTEQ            reduce using rule 23 (expr -> lvalue .)
    LTEQ            reduce using rule 23 (expr -> lvalue .)
    >               reduce using rule 23 (expr -> lvalue .)
    <               reduce using rule 23 (expr -> lvalue .)
    )               reduce using rule 23 (expr -> lvalue .)
    ]               reduce using rule 23 (expr -> lvalue .)
    ,               reduce using rule 23 (expr -> lvalue .)
    :               reduce using rule 23 (expr -> lvalue .)
    RETURN          reduce using rule 23 (expr -> lvalue .)
    PRINT           reduce using rule 23 (expr -> lvalue .)
    BREAK           reduce using rule 23 (expr -> lvalue .)
    CONTINUE        reduce using rule 23 (expr -> lvalue .)
    {               reduce using rule 23 (expr -> lvalue .)
    ID              reduce using rule 23 (expr -> lvalue .)
    IF              reduce using rule 23 (expr -> lvalue .)
    WHILE           reduce using rule 23 (expr -> lvalue .)
    FOR             reduce using rule 23 (expr -> lvalue .)
    =               shift and go to state 52
    PLUSASSIGN      shift and go to state 53
    MINASSIGN       shift and go to state 54
    MULTASSIGN      shift and go to state 55
    DIVASSIGN       shift and go to state 56


state 15
